# bbc-meeting-alerts

./: .gitignore  Makefile  README.md  app.py  download_audio.py  pyproject.toml  scheduler.py  setup.py
.github/workflows/: lint.yml  release.yml
assets/: icon.icns
src/: app.py  calendar_client.py  download_audio.py  scheduler.py
